import com.github.jengelman.gradle.plugins.shadow.tasks.ShadowJar

plugins {
    id 'java'
    id 'com.azuredoom.hytale-tools'
    id 'com.gradleup.shadow' version '9.6.1'
}

def localProperties = new Properties()
file('gradle.properties').withInputStream { localProperties.load(it) }
def property = { String name ->
    providers.gradleProperty(name).getOrElse(localProperties.getProperty(name))
}

group = 'com.alechilles'
version = property('mod_version')
def patchworkVersion = property('patchwork_version')
def beaconCoordinates = "com.alechilles:beacon-runtime:${property('beacon_version')}"
def embeddedAssetPackDirectory = layout.buildDirectory.dir('generated/embeddedAssetPack')
def exampleAssetPackDirectory = layout.buildDirectory.dir('generated/exampleAssetPack')
def exampleAssetPackVersion = project.version.toString()

java {
    toolchain {
        languageVersion = JavaLanguageVersion.of(25)
    }
}

repositories {
    mavenLocal()
    mavenCentral()
    maven { url = uri('https://beacon.modstats.io/maven/releases') }
    maven { url = uri('https://www.cursemaven.com') }
}

configurations {
    telemetryAssetPack {
        canBeConsumed = false
        canBeResolved = true
        transitive = false
    }
    update5ServerRuntime {
        canBeConsumed = false
        canBeResolved = true
        transitive = false
    }
}

if (rootProject.findProject(':alecstelemetry:runtime') != null) {
    configurations.configureEach {
        resolutionStrategy.dependencySubstitution {
            substitute module('com.alechilles:beacon-runtime') using project(':alecstelemetry:runtime')
        }
    }
}

dependencies {
    compileOnly files(property('nameplatebuilder_jar_path'))
    implementation beaconCoordinates
    telemetryAssetPack beaconCoordinates
    implementation "com.alechilles:patchwork-runtime:${patchworkVersion}"
    implementation "curse.maven:creditor-1560961:${property('creditor_file_id')}"
    implementation "org.xerial:sqlite-jdbc:${property('sqlite_jdbc_version')}"
    implementation "org.slf4j:slf4j-api:${property('slf4j_version')}"
    implementation "org.slf4j:slf4j-nop:${property('slf4j_version')}"
    update5ServerRuntime 'com.hypixel.hytale:Server:0.5.7'
    testImplementation 'org.junit.jupiter:junit-jupiter-api:5.10.2'
    testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine:5.10.2'
    testRuntimeOnly 'org.junit.platform:junit-platform-launcher:1.10.2'
}

configurations.named('testImplementation') {
    extendsFrom(configurations.compileOnly)
}

sourceSets.main.resources.setSrcDirs([embeddedAssetPackDirectory])

hytaleTools {
    hytaleVersion = property('hytale_version')
    patchline = property('hytale_patchline')
    manifestServerVersion = property('hytale_server_version_range')
    manifestGroup = 'Alechilles'
    modId = "Alec's Tamework!"
    modDescription = 'A modular mob taming, behavior, and mechanics framework for Hytale!'
    modUrl = ''
    modCredits = 'Alec (Alechilles)||https://www.curseforge.com/members/alechilles/projects'
    mainClass = 'com.alechilles.alecstamework.Tamework'
    manifestDependencies = 'Hytale:NPC=*'
    manifestOptionalDependencies = 'Frotty27:NameplateBuilder=>=4.260326.7,Buuz135:SimpleClaims=>=1.0.38 <1.1.0,net.evilcraft:QuestLinesClaims==1.3.1'
    curseforgeId = '1447962'
    includesPack = true
    bundleAssetEditorRuntime = false
    // The workspace runner only exposes this directory to clients; dependency
    // resources are otherwise available to Java but absent from the asset pack.
    assetPackSourceDirectory = embeddedAssetPackDirectory
}

tasks.register('prepareEmbeddedAssetPack', Sync) {
    description = 'Merges host and embedded telemetry assets for the development client pack.'
    group = 'hytale'
    dependsOn(tasks.named('createManifestIfMissing'))
    dependsOn(tasks.named('updatePluginManifest'))
    if (rootProject.findProject(':alecstelemetry:runtime') != null) {
        dependsOn(':alecstelemetry:runtime:jar')
    }
    from(layout.projectDirectory.dir('src/main/resources')) {
        exclude '**/*.bak'
    }
    from({ configurations.telemetryAssetPack.collect { zipTree(it) } }) {
        include 'Common/**'
    }
    into(embeddedAssetPackDirectory)
}

tasks.register('prepareExampleAssetPack', Sync) {
    description = 'Prepares the optional Tamework example asset pack.'
    group = 'hytale'
    inputs.property('tameworkVersion', exampleAssetPackVersion)
    from(layout.projectDirectory.dir('examples/asset-pack')) {
        exclude 'README.md'
        filesMatching('manifest.json') {
            expand(tameworkVersion: exampleAssetPackVersion)
        }
    }
    into(exampleAssetPackDirectory)
}

tasks.register('exampleAssetPack', Zip) {
    description = 'Packages the optional Tamework example asset pack.'
    group = 'hytale'
    dependsOn(tasks.named('prepareExampleAssetPack'))
    archiveFileName = "Alec's Tamework! Examples v${project.version}.zip"
    destinationDirectory = layout.buildDirectory.dir('distributions')
    from(exampleAssetPackDirectory)
}

tasks.named('classes') {
    dependsOn(tasks.named('prepareEmbeddedAssetPack'))
}

tasks.named('processResources') {
    dependsOn(tasks.named('prepareEmbeddedAssetPack'))
}

tasks.named('jar') {
    enabled = false
}

tasks.named('shadowJar', ShadowJar) {
    archiveFileName = "Alec's Tamework! v${project.version}.jar"
    archiveClassifier = ''
    // Beacon is embedded implementation detail. Keep its runtime classes private to Tamework so
    // another mod's Beacon copy cannot supply an incompatible nested command-runtime class.
    // Registry property keys remain literal strings so isolated copies still coordinate through
    // the JVM-wide JDK map.
    relocate('com.alechilles.beacon', 'com.alechilles.alecstamework.shadow.beacon') {
        skipStringConstants = true
    }
    relocate 'org.slf4j', 'com.alechilles.alecstamework.shadow.slf4j'
    manifest {
        attributes(
                'Plugin-Group': project.group,
                'Plugin-Name': project.name,
                'Plugin-Version': project.version)
    }
}

tasks.named('assemble') {
    dependsOn(tasks.named('shadowJar'))
    dependsOn(tasks.named('exampleAssetPack'))
}

tasks.withType(Test).configureEach {
    useJUnitPlatform()
    workingDir projectDir
    systemProperty 'java.util.logging.manager', 'com.hypixel.hytale.logger.backend.HytaleLogManager'
    systemProperty 'tamework.update5ServerJar', configurations.update5ServerRuntime.singleFile.absolutePath
}

tasks.named('test') {
    exclude '**/*IT.class'
}

tasks.register('packagingTest', Test) {
    description = 'Runs packaged Tamework integration tests against the Shadow JAR.'
    group = 'verification'
    dependsOn(tasks.named('shadowJar'))
    testClassesDirs = sourceSets.test.output.classesDirs
    classpath = sourceSets.test.runtimeClasspath
    include '**/*IT.class'
    useJUnitPlatform()
    systemProperty 'patchwork.packagedJar', tasks.named('shadowJar', ShadowJar).get().archiveFile.get().asFile.absolutePath
    systemProperty 'java.util.logging.manager', 'com.hypixel.hytale.logger.backend.HytaleLogManager'
}
